<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/layout_medium_margin"
        android:text="@string/current_location"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <ImageView
        android:id="@+id/current_location_img"
        android:layout_width="@dimen/location_img_width"
        android:layout_height="@dimen/location_img_height"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_medium_margin"
        android:contentDescription="@string/current_location_img"
        app:srcCompat="@drawable/currentlocation" />

    <Button
        android:id="@+id/get_current_location_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_location_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_small_margin"
        android:text="@string/get_current_location" />

    <LinearLayout
        android:id="@+id/lines_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_current_location_btn"
        android:layout_marginTop="@dimen/layout_small_margin"
        android:orientation="horizontal"
        android:weightSum="10">

        <View
            android:id="@+id/line_one"
            android:layout_width="@dimen/layout_no_margin"
            android:layout_height="@dimen/layout_very_tiny_margin"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:background="#ddd" />

        <TextView
            android:id="@+id/or_textview"
            android:layout_width="@dimen/layout_no_margin"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_two"
            android:layout_width="@dimen/layout_no_margin"
            android:layout_height="@dimen/layout_very_tiny_margin"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:background="#ddd" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lines_ll"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/layout_medium_margin"
        android:text="@string/any_location"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_margin="@dimen/layout_medium_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/any_location_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_zone_or_subzone" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/any_location_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/save_location" />
</RelativeLayout>