<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="restaurant"
            type="com.android.udacity_foodquest.data.local.entity.CommonRestaurant" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_tiny_margin"
            app:cardCornerRadius="@dimen/layout_tiny_margin"
            tools:context=".ui.detail.RestaurantInfoFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/layout_medium_margin">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_medium_margin"
                    android:text="@string/address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="@dimen/divider_line_length"
                    android:layout_height="@dimen/layout_very_tiny_margin"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_tiny_margin"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/info_adress_texview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_small_margin"
                    android:text="@{restaurant.address}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/restaurant_info_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    tools:text="Lake Bellevue Drive, Bellevue 98005" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_medium_margin"
                    android:text="@string/cuisines"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_adress_texview" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/layout_very_tiny_margin"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_tiny_margin"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/info_cuisines_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_small_margin"
                    android:text="@{restaurant.cuisines}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/restaurant_info_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3"
                    tools:text="Japanese, Sushi" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_medium_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_medium_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_medium_margin"
                    android:text="@string/price_range"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintEnd_toStartOf="@+id/info_price_range_textview"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info_cuisines_textview" />

                <TextView
                    android:id="@+id/info_price_range_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_small_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_small_margin"
                    android:text='@{restaurant.priceRange==1 ? restaurant.currency : restaurant.priceRange==2 ? restaurant.currency+restaurant.currency : restaurant.priceRange==3 ? restaurant.currency+restaurant.currency+restaurant.currency : restaurant.priceRange==4 ? restaurant.currency+restaurant.currency+restaurant.currency+restaurant.currency : restaurant.currency+restaurant.currency+restaurant.currency+restaurant.currency+restaurant.currency}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/restaurant_title_text_size"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    tools:text="$$" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_medium_margin"
                    android:text="@string/average_cost_for_two"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintEnd_toStartOf="@+id/info_average_cost_for_two"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/info_average_cost_for_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_small_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_small_margin"
                    android:text='@{restaurant.averageCostForTwo + " " + restaurant.currency}'
                    android:textSize="@dimen/restaurant_title_text_size"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    tools:text="50 $" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_medium_margin"
                    android:text="@string/online_delivery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintEnd_toStartOf="@+id/info_online_delivery_imageview"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageView
                    android:id="@+id/info_online_delivery_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_small_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_small_margin"
                    android:contentDescription="@string/online_delivery_img"
                    android:src="@{restaurant.hasOnlineDelivery == 0 ? @drawable/ic_thumb_down : @drawable/ic_thumb_up}"
                    android:tint="@{restaurant.hasOnlineDelivery == 0 ? @color/colorAccent : @color/colorPrimaryDark}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/textView13"
                    tools:src="@drawable/ic_thumb_up"
                    tools:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_medium_margin"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_medium_margin"
                    android:layout_marginTop="@dimen/layout_medium_margin"
                    android:text="@string/table_booking"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintEnd_toStartOf="@+id/info_table_booking_imageview"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <ImageView
                    android:id="@+id/info_table_booking_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_small_margin"
                    android:layout_marginLeft="@dimen/layout_small_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:layout_marginStart="@dimen/layout_small_margin"
                    android:contentDescription="@string/table_booking_img"
                    android:src="@{restaurant.hasTableBooking == 0 ? @drawable/ic_thumb_down : @drawable/ic_thumb_up}"
                    android:tint="@{restaurant.hasTableBooking == 0 ? @color/colorAccent : @color/colorPrimaryDark}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView14"
                    app:layout_constraintTop_toTopOf="@+id/textView14"
                    tools:src="@drawable/ic_thumb_up"
                    tools:tint="@color/colorAccent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</layout>